# crewai-research-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
outputs/: sample_report.md
src/: config.py  crew.py
src/agents/: analyst.py  researcher.py  writer.py
src/tasks/: research_tasks.py
src/tools/: save_tool.py  search_tool.py
tests/: conftest.py  test_main.py  test_save_tool.py  test_search_tool.py
