[project]
name = "crewai-research-agent"
version = "0.1.0"
description = "A 3-agent research system powered by CrewAI and Claude"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
